--- a/index.html
+++ b/index.html
@@ -1,12 +1,185 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Город Седона</title>
   </head>
+
   <body>
+    <header class="page-header">
+      <nav class="navigation">
+        <a href="#"><img class="logo" src="#" alt="Логотип сайта"></a>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link current">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hipen">Поиск</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <span class="visually-hipen">Избранное</span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link button" href="catalog.html">Хочу сюда!</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <main class="main-index">
+      <section class="hero">
+        <h1 class="visually-hipen">Добро пожаловать в великолепную Седону</h1>
+        <img class="hero-image" src="#" alt="Горы Седоны">
+      </section>
 
+      <section class="advantages">
+        <h2 class="visually-hipen">Преимущества Седоны</h2>
+          <p class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="why-sedona-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantage-title">Настоящий городок</h3>
+            <p class="advantage-text">
+            Седона — не аттракцион для туристов, там течёт своя жизнь
+            </p>
+            <img class="sedona-saloon" src="#" alt="Салун в Седоне на фоне гор">
+          </li>
+
+          <li class="advantages-item">
+            <h3 class="advantage-title">Небольшая площадь</h3>
+          <p class="advantage-text">
+            Все достопримечательности находятся очень близко
+          </p>
+        </li>
+
+        <li class="advantages-item">
+          <h3 class="advantage-title">Красивая дорога</h3>
+          <p class="advantage-text">
+            Ехать в Седону из Лас-Вегаса совсем не скучно!
+          </p>
+        </li>
+
+        <li class="advantages-item">
+          <h3 class="advantage-title">Мало туристов</h3>
+          <p class="advantage-text">
+            Большинство едет в Гранд Каньон и толпится там
+          </p>
+        </li>
+
+        <li class="advantages-item">
+          <h3 class="advantage-title">Там есть мост дьявола</h3>
+          <p class="advantage-text">
+            Да, по нему можно пройти! Если вы осмелитесь, разумеется
+          </p>
+          <img class="sedona-canyon" src="#" alt="Каньон в Седоне">
+        </li>
+        </ul>
+      </section>
+
+      <section class="visit-sedona">
+        <h2 class="visit-sedona-title">
+          Приезжайте в Седону отдохнуть в комфорте и уюте!
+        </h2>
+        <p class="visit-sedona-text">
+          Опытный персонал и качественное обслуживание!
+        </p>
+      </section>
+
+      <section class="recomendations">
+        <h2 class="visually-hidden">Рекомендации</h2>
+        <ul class="recomendations-list">
+        <li class="recomendations-item">
+          <h3 class="recomendation-title">Жильё</h3>
+          <p class="recomendation-text">
+            Рекомендуем пожить в настоящем мотеле, всё как в кино!
+          </p>
+        </li>
+
+        <li class="recomendations-item">
+          <h3 class="recomendation-title">Еда</h3>
+          <p class="recomendation-text">
+            Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+          </p>
+        </li>
+
+        <li class="recomendations-item">
+          <h3 class="recomendation-title">Сувениры</h3>
+          <p class="recomendation-text">
+            Не только китайского, но и настоящего местного производства!
+          </p>
+        </li>
+        </ul>
+      </section>
+
+      <section class="hotel-search">
+        <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
+        <h3 class="hotel-search-title">Заинтересовались?</h3>
+        <p class="hotel-search-text">
+          Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+          предложения гостиниц в Седоне
+        </p>
+        <a class="button hotel-search-button" href="catalog.html">Поиск гостиницы в Седоне</a>
+      </section>
+
+      <section class="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-text">
+          Только полезная информация и никакого спама, честное бойскаутское!
+        </p>
+
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+          <p class="subscribe-form-email">
+            <label class="visually-hipen" for="email">E-mail</label>
+            <input class="subscribe-input" id="email" name="email" type="email" placeholder="Ваш e-mail" required>
+          </p>
+          <button class="button subscribe-button" type="submit" value="ПОДПИСАТЬСЯ">
+            Подписаться
+          </button>
+        </form>
+      </section>
+
+      <footer class="page-footer">
+        <section class="social">
+          <h2 class="visually-hipen">Седона в социальных сетях</h2>
+          <ul class="social-list">
+            <li class="social-item">
+              <a href="https://vk.com/htmlacademy"><span class="visually-hipen">Vkontakte</span></a>
+            </li>
+            <li class="social-item">
+              <a href="https://t.me/htmlacademy"><span class="visually-hipen">Telegram</span></a>
+            </li>
+            <li class="social-item">
+              <a href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hipen">Youtube</span></a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="phone">
+          <h2 class="visually-hipen">Телефон</h2>
+          <a class="phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        </section>
+
+        <section class="developer">
+          <h2 class="visually-hipen">Сайт разработан</h2>
+          <a href="https://htmlacademy.ru/">
+            <img class="developer-logo" src="#" alt="Логотип html academy">
+          </a>
+        </section>
+      </footer>
+    </main>
   </body>
 </html>
