Исправляет опечатки в наименовании класса

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hipen">Поиск</span>
+              <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hipen">Избранное</span>
+              <span class="visually-hidden">Избранное</span>
             </a>
           </li>
           <li class="navigation-item">
@@ -41,52 +41,52 @@
 
     <main class="main-index">
       <section class="hero">
-        <h1 class="visually-hipen">Добро пожаловать в великолепную Седону</h1>
+        <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
         <img class="hero-image" src="#" alt="Горы Седоны">
       </section>
 
       <section class="advantages">
-        <h2 class="visually-hipen">Преимущества Седоны</h2>
-          <p class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-          <p class="why-sedona-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <h2 class="visually-hidden">Преимущества Седоны</h2>
+        <p class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="why-sedona-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
 
         <ul class="advantages-list">
           <li class="advantages-item">
             <h3 class="advantage-title">Настоящий городок</h3>
             <p class="advantage-text">
-            Седона — не аттракцион для туристов, там течёт своя жизнь
+              Седона — не аттракцион для туристов, там течёт своя жизнь
             </p>
             <img class="sedona-saloon" src="#" alt="Салун в Седоне на фоне гор">
           </li>
 
           <li class="advantages-item">
             <h3 class="advantage-title">Небольшая площадь</h3>
-          <p class="advantage-text">
-            Все достопримечательности находятся очень близко
-          </p>
-        </li>
+            <p class="advantage-text">
+              Все достопримечательности находятся очень близко
+            </p>
+          </li>
 
-        <li class="advantages-item">
-          <h3 class="advantage-title">Красивая дорога</h3>
-          <p class="advantage-text">
-            Ехать в Седону из Лас-Вегаса совсем не скучно!
-          </p>
-        </li>
+          <li class="advantages-item">
+            <h3 class="advantage-title">Красивая дорога</h3>
+            <p class="advantage-text">
+              Ехать в Седону из Лас-Вегаса совсем не скучно!
+            </p>
+          </li>
 
-        <li class="advantages-item">
-          <h3 class="advantage-title">Мало туристов</h3>
-          <p class="advantage-text">
-            Большинство едет в Гранд Каньон и толпится там
-          </p>
-        </li>
+          <li class="advantages-item">
+            <h3 class="advantage-title">Мало туристов</h3>
+            <p class="advantage-text">
+              Большинство едет в Гранд Каньон и толпится там
+            </p>
+          </li>
 
-        <li class="advantages-item">
-          <h3 class="advantage-title">Там есть мост дьявола</h3>
-          <p class="advantage-text">
-            Да, по нему можно пройти! Если вы осмелитесь, разумеется
-          </p>
-          <img class="sedona-canyon" src="#" alt="Каньон в Седоне">
-        </li>
+          <li class="advantages-item">
+            <h3 class="advantage-title">Там есть мост дьявола</h3>
+            <p class="advantage-text">
+              Да, по нему можно пройти! Если вы осмелитесь, разумеется
+            </p>
+            <img class="sedona-canyon" src="#" alt="Каньон в Седоне">
+          </li>
         </ul>
       </section>
 
@@ -102,26 +102,26 @@
       <section class="recomendations">
         <h2 class="visually-hidden">Рекомендации</h2>
         <ul class="recomendations-list">
-        <li class="recomendations-item">
-          <h3 class="recomendation-title">Жильё</h3>
-          <p class="recomendation-text">
-            Рекомендуем пожить в настоящем мотеле, всё как в кино!
-          </p>
-        </li>
+          <li class="recomendations-item">
+            <h3 class="recomendation-title">Жильё</h3>
+            <p class="recomendation-text">
+              Рекомендуем пожить в настоящем мотеле, всё как в кино!
+            </p>
+          </li>
 
-        <li class="recomendations-item">
-          <h3 class="recomendation-title">Еда</h3>
-          <p class="recomendation-text">
-            Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
-          </p>
-        </li>
+          <li class="recomendations-item">
+            <h3 class="recomendation-title">Еда</h3>
+            <p class="recomendation-text">
+              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+            </p>
+          </li>
 
-        <li class="recomendations-item">
-          <h3 class="recomendation-title">Сувениры</h3>
-          <p class="recomendation-text">
-            Не только китайского, но и настоящего местного производства!
-          </p>
-        </li>
+          <li class="recomendations-item">
+            <h3 class="recomendation-title">Сувениры</h3>
+            <p class="recomendation-text">
+              Не только китайского, но и настоящего местного производства!
+            </p>
+          </li>
         </ul>
       </section>
 
@@ -143,7 +143,7 @@
 
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
           <p class="subscribe-form-email">
-            <label class="visually-hipen" for="email">E-mail</label>
+            <label class="visually-hidden" for="email">E-mail</label>
             <input class="subscribe-input" id="email" name="email" type="email" placeholder="Ваш e-mail" required>
           </p>
           <button class="button subscribe-button" type="submit" value="ПОДПИСАТЬСЯ">
@@ -154,27 +154,27 @@
 
       <footer class="page-footer">
         <section class="social">
-          <h2 class="visually-hipen">Седона в социальных сетях</h2>
+          <h2 class="visually-hidden">Седона в социальных сетях</h2>
           <ul class="social-list">
             <li class="social-item">
-              <a href="https://vk.com/htmlacademy"><span class="visually-hipen">Vkontakte</span></a>
+              <a href="https://vk.com/htmlacademy"><span class="visually-hidden">Vkontakte</span></a>
             </li>
             <li class="social-item">
-              <a href="https://t.me/htmlacademy"><span class="visually-hipen">Telegram</span></a>
+              <a href="https://t.me/htmlacademy"><span class="visually-hidden">Telegram</span></a>
             </li>
             <li class="social-item">
-              <a href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hipen">Youtube</span></a>
+              <a href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Youtube</span></a>
             </li>
           </ul>
         </section>
 
         <section class="phone">
-          <h2 class="visually-hipen">Телефон</h2>
+          <h2 class="visually-hidden">Телефон</h2>
           <a class="phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </section>
 
         <section class="developer">
-          <h2 class="visually-hipen">Сайт разработан</h2>
+          <h2 class="visually-hidden">Сайт разработан</h2>
           <a href="https://htmlacademy.ru/">
             <img class="developer-logo" src="#" alt="Логотип html academy">
           </a>
@@ -182,4 +182,5 @@
       </footer>
     </main>
   </body>
+
 </html>
