--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <header class="page-header">
       <nav class="navigation">
-        <a href="#"><img class="logo" src="#" alt="Логотип сайта"></a>
+        <a aria-current="page"><img class="logo" src="#" alt="Логотип сайта"></a>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link current">Главная</a>
+            <a class="navigation-link current" aria-current="page">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
@@ -30,6 +30,7 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
+              <span class="favourites-number">12</span>
             </a>
           </li>
           <li class="navigation-item">
@@ -168,9 +169,9 @@
           </ul>
         </section>
 
-        <section class="phone">
-          <h2 class="visually-hidden">Телефон</h2>
-          <a class="phone-number" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <section class="contacts">
+          <h2 class="visually-hidden">Контакты</h2>
+          <a class="phone-number-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </section>
 
         <section class="developer">
