--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,9 @@
   <body>
     <header class="page-header">
       <nav class="navigation">
-        <a href="index.html"><img class="logo" src="#" alt="Логотип сайта"></a>
+        <a aria-current="page" href="index.html">
+          <img class="sedona-logo" src="img/header-logo-sedona.svg" width="140" height="70" alt="Логотип сайта">
+        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="index.html">Главная</a>
@@ -30,6 +32,7 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
+              <span class="visually-hidden">Количество отелей в избранном:</span>
               <span class="favourites-number">12</span>
             </a>
           </li>
@@ -270,7 +273,7 @@
           <a class="pagination-link" href="#">4</a>
         </li>
         <li class="pagination-item">
-          <a class="pagination-link" href="#">...</a>
+          <span class="pagination-ellipses">...</span>
         </li>
         <li class="pagination-item">
           <a class="pagination-link" href="#">10</a>
@@ -318,7 +321,7 @@
         <section class="developer">
           <h2 class="visually-hidden">Сайт разработан</h2>
           <a href="https://htmlacademy.ru/">
-            <img class="developer-logo" src="#" alt="Логотип html academy">
+            <img class="developer-logo" src="img/logo_htmlacademy.svg" alt="Логотип html academy">
           </a>
         </section>
       </footer>
