--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <header class="page-header">
       <nav class="navigation">
-        <a aria-current="page"><img class="logo" src="#" alt="Логотип сайта"></a>
+        <a aria-current="page" href="index.html">
+          <img class="sedona-logo" src="img/header-logo-sedona.svg" width="140" height="70" alt="Логотип сайта">
+        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link current" aria-current="page">Главная</a>
@@ -30,6 +32,7 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
+              <span class="visually-hidden">Количество отелей в избранном:</span>
               <span class="favourites-number">12</span>
             </a>
           </li>
@@ -43,7 +46,7 @@
     <main class="main-index">
       <section class="hero">
         <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
-        <img class="hero-image" src="#" alt="Горы Седоны">
+        <img class="hero-image" src="img/welcome-text.svg" width="458" height="352" alt="Welcome to the georgeous Sedona">
       </section>
 
       <section class="advantages">
@@ -177,7 +180,7 @@
         <section class="developer">
           <h2 class="visually-hidden">Сайт разработан</h2>
           <a href="https://htmlacademy.ru/">
-            <img class="developer-logo" src="#" alt="Логотип html academy">
+            <img class="developer-logo" src="img/logo_htmlacademy.svg" alt="Логотип html academy">
           </a>
         </section>
       </footer>
