--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <header class="page-header" data-test="header">
       <nav class="navigation">
         <a aria-current="page" href="index.html">
           <img class="sedona-logo" src="img/header-logo-sedona.svg" width="140" height="70" alt="Логотип сайта">
@@ -43,8 +43,8 @@
       </nav>
     </header>
 
-    <main class="main-catalog">
-      <section class="catalog-filter">
+    <main class="main-catalog" data-test="main">
+      <section class="catalog-filter" data-test="filter">
         <header class="catalog-header">
           <h1 class="catalog-filter-title">Гостиницы Седоны</h1>
 
@@ -64,17 +64,17 @@
               <ul class="infrastructure-filter-list">
                 <li class="infrastructure-filter-item">
                   <label class="control">
-                    <input class="contol-input" name="swimming-pool" type="checkbox" checked>Бассейн
+                    <input class="contol-input" name="infrasructure-feature" type="checkbox" value="swimming-pool" checked>Бассейн
                   </label>
                 </li>
                 <li class="infrastructure-filter-item">
                   <label class="control">
-                    <input class="contol-input" name="parking" type="checkbox" checked>Парковка
+                    <input class="contol-input" name="infrasructure-feature" type="checkbox" value="parking" checked>Парковка
                   </label>
                 </li>
                 <li class="infrastructure-filter-item">
                   <label class="control">
-                    <input class="contol-input" name="wi-fi" type="checkbox">Wi-Fi
+                    <input class="contol-input" name="infrasructure-feature" type="checkbox" value="wi-fi">Wi-Fi
                   </label>
                 </li>
               </ul>
@@ -85,17 +85,17 @@
               <ul class="infrastructure-filter-list">
                 <li class="infrastructure-filter-item">
                   <label class="control">
-                    <input class="contol-input" name="accommodation-type" type="radio" checked>Гостиница
+                    <input class="contol-input" name="accommodation-type" type="radio" value="Hotel" checked>Гостиница
                   </label>
                 </li>
                 <li class="infrastructure-filter-item">
                   <label class="control">
-                    <input class="contol-input" name="accommodation-type" type="radio">Мотель
+                    <input class="contol-input" name="accommodation-type" type="radio" value="Motel">Мотель
                   </label>
                 </li>
                 <li class="infrastructure-filter-item">
                   <label class="control">
-                    <input class="contol-input" name="accommodation-type" type="radio">Аппартаменты
+                    <input class="contol-input" name="accommodation-type" type="radio" value="Appartments">Аппартаменты
                   </label>
                 </li>
               </ul>
@@ -120,15 +120,15 @@
 
       </section>
 
-      <section class="hotel-cards-sorting">
+      <section class="hotel-cards-sorting" data-test="catalog">
         <h2 class="hotel-cards-title visually-hidden">Результаты применения фильтра и сортировка</h2>
         <p class="filer-result-title">Найдено гостиниц:
           <span class="filtered-hotels">38</span>
         </p>
 
         <h2 class="after-filter-sorting-title">Сортировка</h2>
-        <select name="after-filter-sorting" id="after-filter-sorting">
-          <option value="lowest-price-first">Сначала дешевые</option>
+        <select class="after-filter-sorting">
+          <option value="lowest-price-first" selected>Сначала дешевые</option>
           <option value="highest-price-first">Сначала дорогие</option>
           <option value="best-rates-first">Сначала с лучшим рейтингом</option>
         </select>
@@ -146,14 +146,14 @@
             </a>
           </li>
           <li class="card-view-item">
-            <a class="card-view-link card-view-listed active" href="#">
+            <a class="card-view-link card-view-listed" href="#">
               <span class="visually-hidden">Списком</span>
             </a>
           </li>
         </ul>
       </section>
 
-      <section class="hotels-cards">
+      <section class="hotels-cards" data-test="catalog">
         <h2 class="hotels-cards-title visually-hidden">Подходящие отели</h2>
 
         <ul class="hotel-cards">
@@ -280,7 +280,7 @@
         </li>
       </ul>
 
-      <section class="subscribe">
+      <section class="subscribe" data-test="subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-text">
           Только полезная информация и никакого спама, честное бойскаутское!
@@ -291,13 +291,13 @@
             <label class="visually-hidden" for="email">E-mail</label>
             <input class="subscribe-input" id="email" name="email" type="email" placeholder="Ваш e-mail" required>
           </p>
-          <button class="button subscribe-button" type="submit" value="ПОДПИСАТЬСЯ">
+          <button class="button subscribe-button" type="submit">
             Подписаться
           </button>
         </form>
       </section>
 
-      <footer class="page-footer">
+      <footer class="page-footer" data-test="footer">
         <section class="social">
           <h2 class="visually-hidden">Седона в социальных сетях</h2>
           <ul class="social-list">
