--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <header class="page-header">
+    <header class="page-header" data-test="header">
       <nav class="navigation">
         <a aria-current="page" href="index.html">
           <img class="sedona-logo" src="img/header-logo-sedona.svg" width="140" height="70" alt="Логотип сайта">
@@ -31,7 +31,6 @@
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">
-              <span class="visually-hidden">Избранное</span>
               <span class="visually-hidden">Количество отелей в избранном:</span>
               <span class="favourites-number">12</span>
             </a>
@@ -43,13 +42,13 @@
       </nav>
     </header>
 
-    <main class="main-index">
-      <section class="hero">
+    <main class="main-index" data-test="main">
+      <section class="hero" data-test="hero">
         <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
         <img class="hero-image" src="img/welcome-text.svg" width="458" height="352" alt="Welcome to the georgeous Sedona">
       </section>
 
-      <section class="advantages">
+      <section class="advantages" data-test="advantages">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
         <p class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="why-sedona-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -129,7 +128,7 @@
         </ul>
       </section>
 
-      <section class="hotel-search">
+      <section class="hotel-search" data-test="search">
         <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
         <h3 class="hotel-search-title">Заинтересовались?</h3>
         <p class="hotel-search-text">
@@ -139,7 +138,7 @@
         <a class="button hotel-search-button" href="catalog.html">Поиск гостиницы в Седоне</a>
       </section>
 
-      <section class="subscribe">
+      <section class="subscribe" data-test="subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-text">
           Только полезная информация и никакого спама, честное бойскаутское!
@@ -150,13 +149,13 @@
             <label class="visually-hidden" for="email">E-mail</label>
             <input class="subscribe-input" id="email" name="email" type="email" placeholder="Ваш e-mail" required>
           </p>
-          <button class="button subscribe-button" type="submit" value="ПОДПИСАТЬСЯ">
+          <button class="button subscribe-button" type="submit">
             Подписаться
           </button>
         </form>
       </section>
 
-      <footer class="page-footer">
+      <footer class="page-footer" data-test="footer">
         <section class="social">
           <h2 class="visually-hidden">Седона в социальных сетях</h2>
           <ul class="social-list">
