Добавляет изображения + правит пути к изображениям

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="page-header" data-test="header">
       <nav class="navigation">
         <a aria-current="page" href="index.html">
-          <img class="sedona-logo" src="img/header-logo-sedona.svg" width="140" height="70" alt="Логотип сайта">
+          <img class="sedona-logo" src="images/header-logo-sedona.svg" width="140" height="70" alt="Логотип сайта">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -45,7 +45,7 @@
     <main class="main-index" data-test="main">
       <section class="hero" data-test="hero">
         <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
-        <img class="hero-image" src="img/welcome-text.svg" width="458" height="352" alt="Welcome to the georgeous Sedona">
+        <img class="hero-image" src="images/welcome-text.svg" width="458" height="352" alt="Welcome to the georgeous Sedona">
       </section>
 
       <section class="advantages" data-test="advantages">
@@ -59,7 +59,7 @@
             <p class="advantage-text">
               Седона — не аттракцион для туристов, там течёт своя жизнь
             </p>
-            <img class="sedona-saloon" src="#" alt="Салун в Седоне на фоне гор">
+            <img class="sedona-saloon" src="images/sedona-saloon.jpg" width="800" height="385" alt="Салун в Седоне на фоне гор">
           </li>
 
           <li class="advantages-item">
@@ -88,7 +88,7 @@
             <p class="advantage-text">
               Да, по нему можно пройти! Если вы осмелитесь, разумеется
             </p>
-            <img class="sedona-canyon" src="#" alt="Каньон в Седоне">
+            <img class="sedona-canyon" src="images/sedona-canyon.jpg" width="800" height="385" alt="Каньон в Седоне">
           </li>
         </ul>
       </section>
@@ -179,7 +179,7 @@
         <section class="developer">
           <h2 class="visually-hidden">Сайт разработан</h2>
           <a href="https://htmlacademy.ru/">
-            <img class="developer-logo" src="img/logo_htmlacademy.svg" alt="Логотип html academy">
+            <img class="developer-logo" src="images/logo_htmlacademy.svg" width="115" height="33" alt="Логотип html academy">
           </a>
         </section>
       </footer>
