--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <header class="page-header" data-test="header">
       <nav class="navigation">
         <a aria-current="page" href="index.html">
-          <img class="sedona-logo" src="img/header-logo-sedona.svg" width="140" height="70" alt="Логотип сайта">
+          <img class="sedona-logo" src="images/header-logo-sedona.svg" width="140" height="70" alt="Логотип сайта">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -159,7 +159,7 @@
         <ul class="hotel-cards">
           <li class="hotel-card">
             <a href="#">
-              <img class="hotel-image" src="#" alt="Отель">
+              <img class="hotel-image" src="images/catalog/amara-resort.jpg" width="300" height="212" alt="Отель">
             </a>
             <a href="#">
               <h3 class="hotel-name">Amara Resort & Spa</h3>
@@ -184,7 +184,7 @@
 
           <li class="hotel-card">
             <a href="#">
-              <img class="hotel-image" src="#" alt="Отель">
+              <img class="hotel-image" src="images/catalog/villas-at-poco-diablo.jpg" width="300" height="212" alt="Отель">
             </a>
             <a href="#">
               <h3 class="hotel-name">Villas at Poco Diablo</h3>
@@ -209,7 +209,7 @@
 
           <li class="hotel-card">
             <a href="#">
-              <img class="hotel-image" src="#" alt="Отель">
+              <img class="hotel-image" src="images/catalog/desert-quail-inn.jpg" width="300" height="212" alt="Отель">
             </a>
             <a href="#">
               <h3 class="hotel-name">Desert Quail Inn</h3>
@@ -234,7 +234,7 @@
 
           <li class="hotel-card">
             <a href="#">
-              <img class="hotel-image" src="#" alt="Отель">
+              <img class="hotel-image" src="images/catalog/greentree-inn.jpg" width="300" height="212" alt="Отель">
             </a>
             <a href="#">
               <h3 class="hotel-name">GreenTree Inn</h3>
@@ -321,7 +321,7 @@
         <section class="developer">
           <h2 class="visually-hidden">Сайт разработан</h2>
           <a href="https://htmlacademy.ru/">
-            <img class="developer-logo" src="img/logo_htmlacademy.svg" alt="Логотип html academy">
+            <img class="developer-logo" src="images/logo_htmlacademy.svg" width="115" height="33" alt="Логотип html academy">
           </a>
         </section>
       </footer>
