Добавляет папку styles
Убирает картинку логотипа html academy из разметки всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Гостиницы Седоны</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
@@ -85,17 +86,17 @@
               <ul class="infrastructure-filter-list">
                 <li class="infrastructure-filter-item">
                   <label class="control">
-                    <input class="contol-input" name="accommodation-type" type="radio" value="Hotel" checked>Гостиница
+                    <input class="contol-input" name="accommodation-type" type="radio" value="hotel" checked>Гостиница
                   </label>
                 </li>
                 <li class="infrastructure-filter-item">
                   <label class="control">
-                    <input class="contol-input" name="accommodation-type" type="radio" value="Motel">Мотель
+                    <input class="contol-input" name="accommodation-type" type="radio" value="motel">Мотель
                   </label>
                 </li>
                 <li class="infrastructure-filter-item">
                   <label class="control">
-                    <input class="contol-input" name="accommodation-type" type="radio" value="Appartments">Аппартаменты
+                    <input class="contol-input" name="accommodation-type" type="radio" value="appartments">Аппартаменты
                   </label>
                 </li>
               </ul>
@@ -321,7 +322,7 @@
         <section class="developer">
           <h2 class="visually-hidden">Сайт разработан</h2>
           <a href="https://htmlacademy.ru/">
-            <img class="developer-logo" src="images/logo_htmlacademy.svg" width="115" height="33" alt="Логотип html academy">
+            <span class="visually-hidden">html academy</span>
           </a>
         </section>
       </footer>
