--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Город Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
 
   <body>
@@ -179,7 +180,7 @@
         <section class="developer">
           <h2 class="visually-hidden">Сайт разработан</h2>
           <a href="https://htmlacademy.ru/">
-            <img class="developer-logo" src="images/logo_htmlacademy.svg" width="115" height="33" alt="Логотип html academy">
+            <span class="visually-hidden">html academy</span>
           </a>
         </section>
       </footer>
