Правит опечатки в названии классов

--- a/catalog.html
+++ b/catalog.html
@@ -61,28 +61,28 @@
           <form class="hotel-filter-form" action="https://echo.htmlacademy.ru/" method="get">
 
             <fieldset class="hotel-filter-group">
-              <legend class="infrasructure-title">Инфраструктура:</legend>
+              <legend class="infrastructure-title">Инфраструктура:</legend>
               <ul class="infrastructure-filter-list">
                 <li class="infrastructure-filter-item">
                   <label class="control">
-                    <input class="contol-input" name="infrasructure-feature" type="checkbox" value="swimming-pool" checked>Бассейн
+                    <input class="contol-input" name="infrastructure-feature" type="checkbox" value="swimming-pool" checked>Бассейн
                   </label>
                 </li>
                 <li class="infrastructure-filter-item">
                   <label class="control">
-                    <input class="contol-input" name="infrasructure-feature" type="checkbox" value="parking" checked>Парковка
+                    <input class="contol-input" name="infrastructure-feature" type="checkbox" value="parking" checked>Парковка
                   </label>
                 </li>
                 <li class="infrastructure-filter-item">
                   <label class="control">
-                    <input class="contol-input" name="infrasructure-feature" type="checkbox" value="wi-fi">Wi-Fi
+                    <input class="contol-input" name="infrastructure-feature" type="checkbox" value="wi-fi">Wi-Fi
                   </label>
                 </li>
               </ul>
             </fieldset>
 
             <fieldset class="hotel-filter-group">
-              <legend class="infrasructure-title">Тип Жилья:</legend>
+              <legend class="infrastructure-title">Тип Жилья:</legend>
               <ul class="infrastructure-filter-list">
                 <li class="infrastructure-filter-item">
                   <label class="control">
@@ -103,7 +103,7 @@
             </fieldset>
 
             <fieldset class="hotel-filter-group">
-              <legend class="infrasructure-title">Стоимость, ₽:</legend>
+              <legend class="infrastructure-title">Стоимость, ₽:</legend>
               <label class="price-range-control">от<input type="text" name="min-price" value="0"></label>
               <label class="price-range-control">до<input type="text" name="max-price" value="9000"></label>
               <button class="min-price-handle" type="button">
