--- a/index.html
+++ b/index.html
@@ -46,49 +46,65 @@
     <main class="main-index" data-test="main">
       <section class="hero" data-test="hero">
         <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
-        <img class="hero-image" src="images/welcome-text.svg" width="458" height="352" alt="Welcome to the georgeous Sedona">
+        <img class="hero-image" src="images/welcome-text.svg" width="458" height="352"
+          alt="Welcome to the georgeous Sedona">
       </section>
 
       <section class="advantages" data-test="advantages">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
-        <p class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="advantages-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
         <p class="why-sedona-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
 
         <ul class="advantages-list">
-          <li class="advantages-item">
-            <h3 class="advantage-title">Настоящий городок</h3>
-            <p class="advantage-text">
+          <li class="advantages-item first-advantage">
+            <div class="real-city">
+              <div class="real-city-inner">
+              <h3 class="advantage-title">Настоящий городок</h3>
+              <p class="advantage-text">
               Седона — не аттракцион для туристов, там течёт своя жизнь
-            </p>
-            <img class="sedona-saloon" src="images/sedona-saloon.jpg" width="800" height="385" alt="Салун в Седоне на фоне гор">
+              </p>
+            </div>
+            </div>
+            <img class="sedona-saloon" src="images/sedona-saloon.jpg" width="800" height="385"
+              alt="Салун в Седоне на фоне гор">
           </li>
 
-          <li class="advantages-item">
+          <li class="advantages-item second-advantage">
+            <div class="advantages-inner">
             <h3 class="advantage-title">Небольшая площадь</h3>
             <p class="advantage-text">
               Все достопримечательности находятся очень близко
             </p>
+            </div>
           </li>
 
-          <li class="advantages-item">
+          <li class="advantages-item third-advantage">
+            <div class="advantages-inner">
             <h3 class="advantage-title">Красивая дорога</h3>
             <p class="advantage-text">
               Ехать в Седону из Лас-Вегаса совсем не скучно!
             </p>
+            </div>
           </li>
 
-          <li class="advantages-item">
+          <li class="advantages-item fourth-advantage">
+            <div class="advantages-inner"></div>
             <h3 class="advantage-title">Мало туристов</h3>
             <p class="advantage-text">
               Большинство едет в Гранд Каньон и толпится там
             </p>
+          </div>
           </li>
 
-          <li class="advantages-item">
+          <li class="advantages-item fifth-advantage">
+            <div class="devil-bridge">
+              <div class="devil-bridge-inner">
             <h3 class="advantage-title">Там есть мост дьявола</h3>
             <p class="advantage-text">
               Да, по нему можно пройти! Если вы осмелитесь, разумеется
             </p>
+              </div>
+            </div>
             <img class="sedona-canyon" src="images/sedona-canyon.jpg" width="800" height="385" alt="Каньон в Седоне">
           </li>
         </ul>
@@ -96,7 +112,7 @@
 
       <section class="visit-sedona">
         <h2 class="visit-sedona-title">
-          Приезжайте в Седону отдохнуть в комфорте и уюте!
+          Приезжайте в Седону отдохнуть<br> в комфорте и уюте!
         </h2>
         <p class="visit-sedona-text">
           Опытный персонал и качественное обслуживание!
@@ -107,24 +123,30 @@
         <h2 class="visually-hidden">Рекомендации</h2>
         <ul class="recomendations-list">
           <li class="recomendations-item">
+            <div class="recomendation-wrap house">
             <h3 class="recomendation-title">Жильё</h3>
             <p class="recomendation-text">
-              Рекомендуем пожить в настоящем мотеле, всё как в кино!
+              Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!
             </p>
+            </div>
           </li>
 
-          <li class="recomendations-item">
+          <li class="recomendations-item food-item">
+            <div class="recomendation-wrap food">
             <h3 class="recomendation-title">Еда</h3>
             <p class="recomendation-text">
-              Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+              Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!
             </p>
+            </div>
           </li>
 
           <li class="recomendations-item">
+            <div class="recomendation-wrap gifts">
             <h3 class="recomendation-title">Сувениры</h3>
             <p class="recomendation-text">
               Не только китайского, но и настоящего местного производства!
             </p>
+            </div>
           </li>
         </ul>
       </section>
@@ -133,7 +155,7 @@
         <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
         <h3 class="hotel-search-title">Заинтересовались?</h3>
         <p class="hotel-search-text">
-          Укажите предполагаемые даты поездки, и мы покажем вам лучшие
+          Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие
           предложения гостиниц в Седоне
         </p>
         <a class="button hotel-search-button" href="catalog.html">Поиск гостиницы в Седоне</a>
@@ -142,7 +164,7 @@
       <section class="subscribe" data-test="subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-text">
-          Только полезная информация и никакого спама, честное бойскаутское!
+          Только полезная информация и никакого спама,<br> честное бойскаутское!
         </p>
 
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -181,6 +203,7 @@
           <h2 class="visually-hidden">Сайт разработан</h2>
           <a href="https://htmlacademy.ru/">
             <span class="visually-hidden">html academy</span>
+            <svg xmlns="http://www.w3.org/2000/svg" width="115" height="34" fill="none"><g fill="#000" clip-path="url(#a)"><path d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"/></g><defs><clipPath id="a"><path fill="#fff" d="M0 .36h115v33H0z"/></clipPath></defs></svg>
           </a>
         </section>
       </footer>
