--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <div class="body-wrapper">
     <header class="page-header" data-test="header">
       <nav class="navigation">
         <a aria-current="page" href="index.html">
@@ -26,13 +27,13 @@
         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
+            <a class="navigation-link search" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">
-              <span class="visually-hidden">Количество отелей в избранном:</span>
+            <a class="navigation-link favourites" href="#">
+              <span class="visually-hidden">Отелей в избранном:</span>
               <span class="favourites-number">12</span>
             </a>
           </li>
@@ -52,14 +53,14 @@
 
       <section class="advantages" data-test="advantages">
         <h2 class="visually-hidden">Преимущества Седоны</h2>
-        <p class="advantages-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
+        <p class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="why-sedona-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
 
         <ul class="advantages-list">
-          <li class="advantages-item first-advantage">
+          <li class="real-city-advantage">
             <div class="real-city">
               <div class="real-city-inner">
-              <h3 class="advantage-title">Настоящий городок</h3>
+              <h3 class="advantage-title white-title">Настоящий городок</h3>
               <p class="advantage-text">
               Седона — не аттракцион для туристов, там течёт своя жизнь
               </p>
@@ -69,7 +70,7 @@
               alt="Салун в Седоне на фоне гор">
           </li>
 
-          <li class="advantages-item second-advantage">
+          <li class="advantages-item">
             <div class="advantages-inner">
             <h3 class="advantage-title">Небольшая площадь</h3>
             <p class="advantage-text">
@@ -78,7 +79,7 @@
             </div>
           </li>
 
-          <li class="advantages-item third-advantage">
+          <li class="advantages-item beautiful-road-advantage">
             <div class="advantages-inner">
             <h3 class="advantage-title">Красивая дорога</h3>
             <p class="advantage-text">
@@ -87,8 +88,8 @@
             </div>
           </li>
 
-          <li class="advantages-item fourth-advantage">
-            <div class="advantages-inner"></div>
+          <li class="advantages-item">
+            <div class="advantages-inner">
             <h3 class="advantage-title">Мало туристов</h3>
             <p class="advantage-text">
               Большинство едет в Гранд Каньон и толпится там
@@ -96,10 +97,10 @@
           </div>
           </li>
 
-          <li class="advantages-item fifth-advantage">
+          <li class="bridge-advantage">
             <div class="devil-bridge">
               <div class="devil-bridge-inner">
-            <h3 class="advantage-title">Там есть мост дьявола</h3>
+            <h3 class="advantage-title white-title">Там есть мост дьявола</h3>
             <p class="advantage-text">
               Да, по нему можно пройти! Если вы осмелитесь, разумеется
             </p>
@@ -182,14 +183,14 @@
         <section class="social">
           <h2 class="visually-hidden">Седона в социальных сетях</h2>
           <ul class="social-list">
-            <li class="social-item">
-              <a href="https://vk.com/htmlacademy"><span class="visually-hidden">Vkontakte</span></a>
+            <li class="social-item vkontakte">
+              <a class="social-link-vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Vkontakte</span></a>
             </li>
-            <li class="social-item">
-              <a href="https://t.me/htmlacademy"><span class="visually-hidden">Telegram</span></a>
+            <li class="social-item telegram">
+              <a class="social-link-telegram" href="https://t.me/htmlacademy"><span class="visually-hidden">Telegram</span></a>
             </li>
-            <li class="social-item">
-              <a href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Youtube</span></a>
+            <li class="social-item youtube">
+              <a class="social-link-youtube" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Youtube</span></a>
             </li>
           </ul>
         </section>
@@ -208,6 +209,7 @@
         </section>
       </footer>
     </main>
+    </div>
   </body>
 
 </html>
