Исправляет кнопку в хэдере, добавляет фон в селект

--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Гостиницы Седоны</title>
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 
@@ -116,13 +117,13 @@
               <button class="min-price-handle" type="button">
                 <span class="visually-hidden">Установка минимальной цены</span>
               </button>
-              <button class="min-price-handle" type="button">
+              <button class="max-price-handle" type="button">
                 <span class="visually-hidden">Установка максимальной цены</span>
               </button>
             </fieldset>
 
-            <button class="hotel-filter-submit hotel-filter-button" type="submit">Применить</button>
-            <button class="hotel-filter-reset hotel-filter-button" type="reset">Сбросить</button>
+            <button class="hotel-filter-submit hotel-filter-button button" type="submit">Применить</button>
+            <button class="hotel-filter-reset hotel-filter-button button" type="reset">Сбросить</button>
           </form>
         </header>
 
