Добавляет тень обёртке и звёзды в каталог

--- a/catalog.html
+++ b/catalog.html
@@ -186,7 +186,7 @@
               </a>
             </p>
             <p class="stars-rate">
-              <span class="stars visually-hidden">4 звезды</span>
+              <span class="stars-four visually-hidden">4 звезды</span>
               <span class="hotel-rate">Рейтинг: 8,5</span>
             </p>
           </li>
@@ -211,7 +211,7 @@
               </a>
             </p>
             <p class="stars-rate">
-              <span class="stars visually-hidden">4 звезды</span>
+              <span class="stars-four visually-hidden">4 звезды</span>
               <span class="hotel-rate">Рейтинг: 9,2</span>
             </p>
           </li>
@@ -236,7 +236,7 @@
               </a>
             </p>
             <p class="stars-rate">
-              <span class="stars visually-hidden">3 звезды</span>
+              <span class="stars-three visually-hidden">3 звезды</span>
               <span class="hotel-rate">Рейтинг: 6,9</span>
             </p>
           </li>
@@ -261,7 +261,7 @@
               </a>
             </p>
             <p class="stars-rate">
-              <span class="stars visually-hidden">2 звезды</span>
+              <span class="stars-two visually-hidden">2 звезды</span>
               <span class="hotel-rate">Рейтинг: 5,0</span>
             </p>
           </li>
