Добавляет вертикальные отступы, правит стили

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <a aria-current="page" href="index.html">
             <img class="sedona-logo" src="images/header-logo-sedona.svg" width="140" height="70" alt="Логотип сайта">
           </a>
-          <ul class="navigation-list">
+          <ul class="navigation-list main-navigation">
             <li class="navigation-item">
               <a class="navigation-link current" aria-current="page">Главная</a>
             </li>
@@ -26,18 +26,18 @@
             </li>
           </ul>
           <ul class="navigation-list navigation-user">
-            <li class="navigation-item">
+            <li class="navigation-user-item">
               <a class="navigation-link search" href="#">
                 <span class="visually-hidden">Поиск</span>
               </a>
             </li>
-            <li class="navigation-item">
+            <li class="navigation-user-item">
               <a class="navigation-link favourites" href="#">
                 <span class="visually-hidden">Отелей в избранном:</span>
                 <span class="favourites-number">12</span>
               </a>
             </li>
-            <li class="navigation-item">
+            <li class="navigation-user-item">
               <a class="navigation-link button" href="catalog.html">Хочу сюда!</a>
             </li>
           </ul>
@@ -59,12 +59,12 @@
           <ul class="advantages-list">
             <li class="real-city-advantage">
               <div class="real-city">
-                <div class="real-city-inner">
+
                   <h3 class="advantage-title white-title">Настоящий городок</h3>
                   <p class="advantage-text">
                     Седона — не аттракцион для туристов, там течёт своя жизнь
                   </p>
-                </div>
+
               </div>
               <img class="sedona-saloon" src="images/sedona-saloon.jpg" width="800" height="385"
                 alt="Салун в Седоне на фоне гор">
@@ -99,12 +99,12 @@
 
             <li class="bridge-advantage">
               <div class="devil-bridge">
-                <div class="devil-bridge-inner">
+
                   <h3 class="advantage-title white-title">Там есть мост дьявола</h3>
                   <p class="advantage-text">
                     Да, по нему можно пройти! Если вы осмелитесь, разумеется
                   </p>
-                </div>
+
               </div>
               <img class="sedona-canyon" src="images/sedona-canyon.jpg" width="800" height="385" alt="Каньон в Седоне">
             </li>
