--- a/catalog.html
+++ b/catalog.html
@@ -11,10 +11,10 @@
     <div class="body-wrapper">
       <header class="page-header" data-test="header">
         <nav class="navigation">
-          <a aria-current="page" href="index.html">
+          <a class="logo-link" href="index.html">
             <img class="sedona-logo" src="images/header-logo-sedona.svg" width="140" height="70" alt="Логотип сайта">
           </a>
-          <ul class="navigation-list">
+          <ul class="navigation-list main-navigation">
             <li class="navigation-item">
               <a class="navigation-link" href="index.html">Главная</a>
             </li>
@@ -270,28 +270,28 @@
               </p>
             </li>
           </ul>
-        </section>
 
-        <ul class="pagination">
-          <li class="pagination-item current-page-item">
-            <a class="pagination-link current-page-link" aria-current="page">1</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">2</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">3</a>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">4</a>
-          </li>
-          <li class="pagination-item pagination-ellipses-item">
-            <span class="pagination-ellipses">...</span>
-          </li>
-          <li class="pagination-item">
-            <a class="pagination-link" href="#">10</a>
-          </li>
-        </ul>
+          <ul class="pagination">
+            <li class="pagination-item current-page-item">
+              <a class="pagination-link current-page-link" aria-current="page">1</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">2</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">3</a>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">4</a>
+            </li>
+            <li class="pagination-item pagination-ellipses-item">
+              <span class="pagination-ellipses">...</span>
+            </li>
+            <li class="pagination-item">
+              <a class="pagination-link" href="#">10</a>
+            </li>
+          </ul>
+        </section>
 
         <section class="subscribe-catalog" data-test="subscribe">
           <h2 class="subscribe-catalog-title">Подпишитесь на рассылку</h2>
