Правит отступы в секциях и оформление шапки сайта

--- a/index.html
+++ b/index.html
@@ -51,19 +51,21 @@
             alt="Welcome to the georgeous Sedona">
         </section>
 
-        <section class="advantages" data-test="advantages">
+        <section class="advantages-title-section" data-test="advantages">
           <h2 class="visually-hidden">Преимущества Седоны</h2>
           <p class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
           <p class="why-sedona-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        </section>
 
+        <section class="advantages" data-test="advantages">
           <ul class="advantages-list">
             <li class="real-city-advantage">
               <div class="real-city">
 
-                  <h3 class="advantage-title white-title">Настоящий городок</h3>
-                  <p class="advantage-text">
-                    Седона — не аттракцион для туристов, там течёт своя жизнь
-                  </p>
+                <h3 class="advantage-title white-title">Настоящий городок</h3>
+                <p class="advantage-text">
+                  Седона — не аттракцион для туристов, там течёт своя жизнь
+                </p>
 
               </div>
               <img class="sedona-saloon" src="images/sedona-saloon.jpg" width="800" height="385"
@@ -100,10 +102,10 @@
             <li class="bridge-advantage">
               <div class="devil-bridge">
 
-                  <h3 class="advantage-title white-title">Там есть мост дьявола</h3>
-                  <p class="advantage-text">
-                    Да, по нему можно пройти! Если вы осмелитесь, разумеется
-                  </p>
+                <h3 class="advantage-title white-title">Там есть мост дьявола</h3>
+                <p class="advantage-text">
+                  Да, по нему можно пройти! Если вы осмелитесь, разумеется
+                </p>
 
               </div>
               <img class="sedona-canyon" src="images/sedona-canyon.jpg" width="800" height="385" alt="Каньон в Седоне">
@@ -123,31 +125,31 @@
         <section class="recomendations">
           <h2 class="visually-hidden">Рекомендации</h2>
           <ul class="recomendations-list">
-            <li class="recomendations-item">
-              <div class="recomendation-wrap house">
+            <li class="recomendations-item house">
+
                 <h3 class="recomendation-title">Жильё</h3>
                 <p class="recomendation-text">
                   Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!
                 </p>
-              </div>
+
             </li>
 
-            <li class="recomendations-item food-item">
-              <div class="recomendation-wrap food">
+            <li class="recomendations-item food food-item">
+
                 <h3 class="recomendation-title">Еда</h3>
                 <p class="recomendation-text">
                   Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!
                 </p>
-              </div>
+
             </li>
 
-            <li class="recomendations-item">
-              <div class="recomendation-wrap gifts">
+            <li class="recomendations-item gifts">
+
                 <h3 class="recomendation-title">Сувениры</h3>
                 <p class="recomendation-text">
                   Не только китайского, но и настоящего местного производства!
                 </p>
-              </div>
+
             </li>
           </ul>
         </section>
