Добавляет класс ссылке логотипа сайта в index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="body-wrapper">
       <header class="page-header" data-test="header">
         <nav class="navigation">
-          <a aria-current="page" href="index.html">
+          <a class="logo-link" aria-current="page" href="index.html">
             <img class="sedona-logo" src="images/header-logo-sedona.svg" width="140" height="70" alt="Логотип сайта">
           </a>
           <ul class="navigation-list main-navigation">
