добавляет стрелочку в хлебные крошки

--- a/catalog.html
+++ b/catalog.html
@@ -50,8 +50,8 @@
             <h1 class="catalog-filter-title">Гостиницы Седоны</h1>
 
             <ul class="breadcrumbs">
-              <li class="breadcrumbs-item home-link">
-                <a class="breadcrumbs-link" href="index.html"><span class="visually-hidden">Главная</span></a>
+              <li class="breadcrumbs-item">
+                <a class="breadcrumbs-link home-link" href="index.html"><span class="visually-hidden">Главная</span></a>
               </li>
               <li class="breadcrumbs-item">
                 <a class="breadcrumbs-link" aria-current="page">Гостиницы</a>
