Стилизует формы фильтров и селект

--- a/catalog.html
+++ b/catalog.html
@@ -64,19 +64,25 @@
                 <ul class="infrastructure-filter-list">
                   <li class="infrastructure-filter-item">
                     <label class="control">
-                      <input class="contol-input" name="infrastructure-feature" type="checkbox" value="swimming-pool"
-                        checked>Бассейн
+                      <input class="control-input visually-hidden" name="infrastructure-feature" type="checkbox" value="swimming-pool"
+                        checked>
+                      <span class="control-mark"></span>
+                      <span class="control-label">Бассейн</span>
                     </label>
                   </li>
                   <li class="infrastructure-filter-item">
                     <label class="control">
-                      <input class="contol-input" name="infrastructure-feature" type="checkbox" value="parking"
-                        checked>Парковка
+                      <input class="control-input visually-hidden" name="infrastructure-feature" type="checkbox" value="parking"
+                        checked>
+                      <span class="control-mark"></span>
+                      <span class="control-label">Парковка</span>
                     </label>
                   </li>
                   <li class="infrastructure-filter-item">
                     <label class="control">
-                      <input class="contol-input" name="infrastructure-feature" type="checkbox" value="wi-fi">Wi-Fi
+                      <input class="control-input visually-hidden" name="infrastructure-feature" type="checkbox" value="wi-fi">
+                      <span class="control-mark"></span>
+                      <span class="control-label">Wi-Fi</span>
                     </label>
                   </li>
                 </ul>
@@ -87,18 +93,24 @@
                 <ul class="infrastructure-filter-list">
                   <li class="infrastructure-filter-item">
                     <label class="control">
-                      <input class="contol-input" name="accommodation-type" type="radio" value="hotel" checked>Гостиница
+                      <input class="control-input visually-hidden" name="accommodation-type" type="radio" value="hotel" checked>
+                      <span class="control-mark"></span>
+                      <span class="control-label">Гостиница</span>
                     </label>
                   </li>
                   <li class="infrastructure-filter-item">
                     <label class="control">
-                      <input class="contol-input" name="accommodation-type" type="radio" value="motel">Мотель
+                      <input class="control-input visually-hidden" name="accommodation-type" type="radio" value="motel">
+                      <span class="control-mark"></span>
+                      <span class="control-label">Мотель</span>
                     </label>
                   </li>
                   <li class="infrastructure-filter-item">
                     <label class="control">
-                      <input class="contol-input" name="accommodation-type" type="radio"
-                        value="appartments">Аппартаменты
+                      <input class="control-input visually-hidden" name="accommodation-type" type="radio"
+                        value="appartments">
+                        <span class="control-mark"></span>
+                        <span class="control-label">Аппартаменты</span>
                     </label>
                   </li>
                 </ul>
@@ -110,12 +122,12 @@
                 <div class="range">
                   <div class="range-wrapper-inputs">
                     <label class="price-range-control">
+                      <input class="price-input-from range-input" type="number" name="min-price" value="0">
                       <span class="price-range-control-from">от</span>
-                      <input class="price-input-from" type="number" name="min-price" value="0">
                     </label>
                     <label class="price-range-control">
+                      <input class="price-input-till range-input" type="number" name="max-price" value="9000">
                       <span class="price-range-control-till">до</span>
-                      <input class="price-input-till" type="number" name="max-price" value="9000">
                     </label>
                   </div>
                   <div class="range-scale">
